# petstore-api-test-project

./: README.md  pyproject.toml
helpers/: test_data.py
schemas/: schemas.py
tests/: conftest.py  test_petstore.py
