[tool.poetry]
name = "booker-api-test-project"
version = "0.1.0"
description = ""
authors = ["matyukha <m@matyuha.ru>"]
readme = "README.md"
packages = [{include = "booker_api_test_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.2.0"
requests = "^2.28.1"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

